--- a/src/assets/styles/section.css
+++ b/src/assets/styles/section.css
@@ -6,15 +6,21 @@ section p {
     width: 250px;
 }
 
+
 .bullet img {
     height: 100px;
     width: 100px;
 }
 
+.bullets {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
 .special-bullet {
     align-items: center;
 }
-
 
 .special-bullet-title {
   font-size: large;
@@ -44,4 +50,5 @@ section p {
     padding: 0.5em 0;
     font-size: x-large;
     font-weight: bold;
+    width: 100%;
 }
