--- a/src/styles.css
+++ b/src/styles.css
@@ -49,3 +49,15 @@
   height: 2em !important;
   margin-bottom: 1em !important;
 }
+
+@media screen and (max-width: 768px) {
+  .specialBullet-skills, .bullets  {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .bullets  {
+    align-items: center;
+  }
+}
