--- a/src/assets/styles/utils.css
+++ b/src/assets/styles/utils.css
@@ -1,4 +1,5 @@
 .pr-5 { padding-right: 5px; }
+.pl-5 { padding-left: 5px; }
 .left-align-text { text-align: left; }
 .centered-text { text-align: center; }
 .right-align-text { text-align: right; }
