--- a/src/assets/styles/mobile.css
+++ b/src/assets/styles/mobile.css
@@ -23,6 +23,11 @@
     flex-direction: column;
     align-items: center;
   }
+
+  .special-bullet-description {
+    width: 300px;
+  }
+
   .container {
     display: flex;
     flex-direction: column;
