--- a/src/assets/styles/utils.css
+++ b/src/assets/styles/utils.css
@@ -1,5 +1,36 @@
-.pr-5 { padding-right: 5px; }
-.pl-5 { padding-left: 5px; }
+.pt-05 { padding-top: 0.5em; }
+.pt-1  { padding-top: 1em; }
+.pt-2  { padding-top: 2em; }
+
+.pb-05 { padding-bottom: 0.5em; }
+.pb-1  { padding-bottom: 1em; }
+.pb-2  { padding-bottom: 2em; }
+
+.pr-05 { padding-right: 0.5em; }
+.pr-1  { padding-right: 1em; }
+.pr-2  { padding-right: 2em; }
+
+.pl-05 { padding-left: 0.5em; }
+.pl-1  { padding-left: 1em; }
+.pl-2  { padding-left: 2em; }
+
+
+.mt-05 { margin-top: 0.5em; }
+.mt-1  { margin-top: 1em; }
+.mt-2  { margin-top: 2em; }
+
+.mb-05 { margin-bottom: 0.5em; }
+.mb-1  { margin-bottom: 1em; }
+.mb-2  { margin-bottom: 2em; }
+
+.mr-05 { margin-right: 0.5em; }
+.mr-1  { margin-right: 1em; }
+.mr-2  { margin-right: 2em; }
+
+.ml-05 { margin-left: 0.5em; }
+.ml-1  { margin-left: 1em; }
+.ml-2  { margin-left: 2em; }
+
 .left-align-text { text-align: left; }
 .centered-text { text-align: center; }
 .right-align-text { text-align: right; }
