--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section class="presentation" fxLayout="column" fxLayoutAlign="center center" id="presentation">
   <h1 [innerHTML]="presentationTitle"></h1>
-  <button class="startButton btn btn-outline-primary btn-lg" onclick="start()">Iniziamo!</button>
+  <button class="startButton btn btn-outline-primary btn-lg"><a href="#about">Iniziamo!</a></button>
 </section>
 
 <nav>
