--- a/src/assets/styles/mobile.css
+++ b/src/assets/styles/mobile.css
@@ -1,4 +1,4 @@
-/* SMARTPHONE */
+
 @media only screen and (max-device-width: 524px) {
   .bullets {
     display: flex;
@@ -7,15 +7,7 @@
   }
 }
 
-/* TABLET */
 @media only screen and (min-device-width: 200px) and (max-device-width: 768px) {
-  nav {
-    display: none;
-  }
-  .mini-nav {
-    display: block;
-  }
-
   .container {
     display: flex;
     flex-direction: column;
@@ -29,18 +21,23 @@
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
   }
-
 }
 
-
-/* >TABLET && <DESKTOP */
 @media only screen and (min-device-width: 769px) and (max-device-width: 848px) {
   .specialBullet-skills {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+}
 
+@media screen and (max-width: 848px) {
+  nav {
+    display: none;
+  }
+  .mini-nav {
+    display: block;
+  }
 }
 
 @media screen and (max-width: 848px) {
@@ -56,3 +53,4 @@
     min-width: 300px;
   }
 }
+
