--- a/src/assets/styles/mobile.css
+++ b/src/assets/styles/mobile.css
@@ -5,6 +5,11 @@
     flex-direction: column;
     align-items: center;
   }
+  .contacts {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
 }
 
 @media only screen and (min-device-width: 200px) and (max-device-width: 768px) {
@@ -47,10 +52,10 @@
     justify-content: center;
   }
   .special-bullet-description {
-    width: 300px;
+    width: 250px;
   }
   .skill-bar {
-    min-width: 300px;
+    min-width: 250px;
   }
 }
 
