--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,10 +87,9 @@
     </div>
   </ng-container>
 
-  <hr class="mt-5">
 </section>
 
-<footer>
+<footer id="footer">
   <small>{{copyrightText}}</small>
 </footer>
 
