--- a/src/assets/styles/section.css
+++ b/src/assets/styles/section.css
@@ -6,10 +6,13 @@ section p {
     width: 250px;
 }
 
-
 .bullet img {
     height: 100px;
     width: 100px;
+}
+
+.bullet figcaption b {
+  font-size: large;
 }
 
 .bullets {
@@ -23,7 +26,7 @@ section p {
 }
 
 .special-bullet-title {
-  font-size: large;
+  font-size: x-large;
 }
 
 .special-bullet-description {
@@ -54,7 +57,7 @@ section p {
 
 .section-title {
     padding: 0.5em 0;
-    font-size: x-large;
+    font-size: xx-large;
     font-weight: bold;
     padding-top: 96px;
     border-bottom: 3px solid #000;
