--- a/src/assets/styles/navigation.css
+++ b/src/assets/styles/navigation.css
@@ -10,8 +10,10 @@ nav {
 
 mat-nav-list {
     padding: 0 !important;
-    display: flex;
+    display: flex !important;
     justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
     width: 80%;
 }
 
