--- a/src/assets/styles/section.css
+++ b/src/assets/styles/section.css
@@ -4,6 +4,10 @@ section p {
 
 .bullet {
     width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .bullet img {
@@ -22,7 +26,10 @@ section p {
 }
 
 .special-bullet {
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .special-bullet-title {
@@ -61,6 +68,12 @@ section p {
     font-weight: bold;
     padding-top: 96px;
     border-bottom: 3px solid #000;
+}
+
+.skills-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .skill-bar {
