--- a/src/assets/styles/section.css
+++ b/src/assets/styles/section.css
@@ -13,6 +13,7 @@ section p {
 .bullet img {
     height: 100px;
     width: 100px;
+    border-radius: 50%;
 }
 
 .bullet figcaption b {
@@ -43,6 +44,7 @@ section p {
 .special-bullet img {
     height: 300px;
     width: 250px;
+    border-radius: 5%;
 }
 
 .specialBullet-skills {
@@ -74,6 +76,16 @@ section p {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.skill-bar {
+  border-top-right-radius: 2%;
+  border-bottom-right-radius: 2%;
+}
+
+.skill-bar p {
+  border-top-left-radius: 5%;
+  border-bottom-left-radius: 5%;
 }
 
 .skill-bar {
