--- a/src/assets/styles/section.css
+++ b/src/assets/styles/section.css
@@ -102,7 +102,8 @@ section p {
   width: 100px;
   margin-bottom: 0;
   position: absolute;
-  background-color: #aaa;
+  background-color: #4568dc;
+  color: #FFF;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -112,7 +113,18 @@ section p {
   display: flex;
   align-items: center;
   justify-content: end;
-  background-color: #abc;
+  background-image: linear-gradient(45deg, #4568dc, #b06ab3);
+  animation-duration: 0.0s;
+  animation-name: ease-in-out;
+}
+
+@keyframes ease-in-out { 
+  from { 
+    width: 0;
+  } 
+  to { 
+    width: 100%;
+  } 
 }
 
 .skill-bar span {
