--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section class="presentation" id="presentation">
   <select *ngIf="languages.length > 1" [(ngModel)]="selectedOption" (change)="changeLang()">
-    <option *ngFor="let language of languages" [ngValue]="language.lang">{{language.lang}}</option>
+    <option *ngFor="let language of languages" [ngValue]="language.lang">{{language.name}}</option>
   </select>
   <h1 [innerHTML]="presentationTitle" class="centered-text"></h1>
   <a href="#about"><button class="bn30">Iniziamo!</button></a>
