--- a/src/assets/styles/section.css
+++ b/src/assets/styles/section.css
@@ -12,8 +12,10 @@ section p {
 }
 
 .bullet img {
-    height: 100px;
-    width: 100px;
+    max-height: 100px;
+    max-width: 100px;
+    width: 100%;
+    aspect-ratio: 1/1;
     border-radius: 5%;
 }
 
@@ -43,8 +45,10 @@ section p {
 }
 
 .special-bullet img {
-    height: 450px;
-    width: 300px;
+    max-height: 450px;
+    max-width: 300px;
+    width: 100%;
+    aspect-ratio: 2/3;
     border-radius: 5%;
 }
 
@@ -118,13 +122,13 @@ section p {
   animation-name: ease-in-out;
 }
 
-@keyframes ease-in-out { 
-  from { 
+@keyframes ease-in-out {
+  from {
     width: 0;
-  } 
-  to { 
+  }
+  to {
     width: 100%;
-  } 
+  }
 }
 
 .skill-bar span {
