--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<splash-screen [showSplash]="showSplash"></splash-screen>
+<splash-screen [isSplashHidden]="isSplashHidden"></splash-screen>
 
-<section class="presentation" id="presentation">
+<section *ngIf="presentationTitle" class="presentation" id="presentation">
   <select *ngIf="languages.length > 1" [(ngModel)]="selectedOption" (change)="changeLang()">
     <option *ngFor="let language of languages" [ngValue]="language.lang">{{language.name}}</option>
   </select>
