--- a/src/components/splash/splash-screen.component.css
+++ b/src/components/splash/splash-screen.component.css
@@ -14,38 +14,17 @@
   transition: left 0.5s;
 }
 
-.app-label {
-  margin-top: 32px;
-  color: #fff;
-  font-size: 3em;
-  font-family: "Roboto", cursive;
+.loader {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 25px solid;
+  border-color: #00ff87 #00422357;
+  animation: 1.5s spin infinite;
 }
 
-.app-splash-inner {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
-
-.app-logo {
-
-  background-repeat: no-repeat;
-  max-width: 100%;
-  background-position: center;
-  background-size: contain;
-  width: 100px;
-  height: 100px;
-}
-
-.app-loader {
-
-  background-repeat: no-repeat;
-  max-width: 100%;
-  background-position: center;
-  background-size: contain;
-  width: 80px;
-  height: 80px;
-  margin-top: 80px;
-}
-
