--- a/src/components/splash/splash-screen.component.html
+++ b/src/components/splash/splash-screen.component.html
@@ -1,7 +1,3 @@
-<div class="app-splash-screen" [ngStyle]="{ left: windowWidth }" *ngIf="showSplash">
-  <div class="app-splash-inner">
-    <div class="app-logo"></div>
-    <div class="app-label">Loading...</div>
-    <div class="app-loader"></div>
-  </div>
+<div class="app-splash-screen" [ngStyle]="{ left: windowWidth }" *ngIf="!isSplashHidden">
+  <div class="loader"></div>
 </div>
