--- a/src/components/color-wheel/color-wheel.component.html
+++ b/src/components/color-wheel/color-wheel.component.html
@@ -5,5 +5,9 @@
 <img usemap="#primary" src="https://via.placeholder.com/350x150" alt="350 x 150 pic"> -->
 
 <div class="colors-container">
-  <div class="color" *ngFor="let color of allColors" [style.background-color]="color.style" (onclick)="showColor($event)"></div>
+  <div class="color" *ngFor="let color of allColors" [style.background-color]="color.style" (click)="showColor($event)" value="color.id"></div>
+  <div *ngIf="selectedColor" class="card">
+    <h3>{{selectedColor.title}}</h3>
+    <p>{{selectedColor.description}}</p>
+  </div>
 </div>
